fix: preserve context-first ordering in planning schema